--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,20 @@
   <name>dna_sample_tracking_mvn Maven Webapp</name>
   <url>http://maven.apache.org</url>
 
+	  <properties>
+        <!-- please change the version accordingly -->
+        <zk.version>6.5.5</zk.version>
+        <commons-io>1.3.1</commons-io>
+        <zktimeline.version>2.3.1_50</zktimeline.version>
+    </properties
+    >
+	
   <repositories>
+   		<repository>
+            <id>ZK CE</id>
+            <name>ZK CE Repository</name>
+            <url>http://mavensync.zkoss.org/maven2</url>
+        </repository>
  </repositories>
   
   <dependencies>
@@ -149,37 +162,38 @@
 <scope>test</scope>
 </dependency>
 <!--###########################33 ZK  -->
-          <dependency>
+          <!--  <dependency>
             <groupId>org.zkoss.zk</groupId>
             <artifactId>zkex</artifactId>
-            <version>6.5.5</version>
+            <version>${zk.version}</version>
         </dependency>
-        
+        -->
       <dependency>
 	      <groupId>org.zkoss.zk</groupId>
 	      <artifactId>zk</artifactId>
-	      <version>6.5.5</version>
+	      <version>${zk.version}</version>
     	</dependency>
     	      <dependency>
 	      <groupId>org.zkoss.zk</groupId>
 	      <artifactId>zul</artifactId>
-	      <version>6.5.5</version>
+	      <version>${zk.version}</version>
     	</dependency>
     	<dependency>
       <groupId>org.zkoss.zk</groupId>
       <artifactId>zhtml</artifactId>
-      <version>6.5.5</version>
+      <version>${zk.version}</version>
     </dependency>
   
  	<dependency>
       <groupId>org.zkoss.zk</groupId>
       <artifactId>zkplus</artifactId>
-      <version>6.5.5</version>
+      <version>${zk.version}</version>
     </dependency>
+      
 	<dependency>
       <groupId>org.zkoss.zk</groupId>
       <artifactId>zcommon</artifactId>
-      <version>6.5.5</version>
+      <version>${zk.version}</version>
     </dependency>
 	
     	<!-- Spring 3 dependencies -->
