--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -52,13 +52,18 @@ bms.service.api = api.leafnode.io:10081/
 ################################## Service contries
 webservice.contry.external= http://services.groupkt.com/country/get/all
 
-################################ Email
-mail.smtp.host = owa.cimmyt.org
+################################ properties to config your account administrator
+# Domain url  owa.cimmyt.org
+mail.smtp.host = domain.org
 mail.smtp.port = 587
-mail.account.manager = breedingapplications@cgiar.org
-mail.account.password = Africa&2017
-mail.from.email = breedingapplications@cgiar.org
-mail.recipients.emails.maize = k.dreher@cgiar.org;r.shrestha2@cgiar.org
-mail.recipients.emails.wheat = k.dreher@cgiar.org;r.shrestha2@cgiar.org
-url.maize.production = http://172.17.60.85:8080/dna_sample_trackingm/
-url.wheat.production = http://172.17.60.85:8080/dna_sample_trackingw/
+# Account manager cornell@cornell.edu
+mail.account.manager = cornell@cornell.edu
+mail.account.password = password
+# From email cornell@cornell.edu
+mail.from.email = cornell@cornell.edu
+# Email account that receive a copy cornellCopy@cornell.edu 
+mail.recipients.emails.maize = cornellCopy@cornell.edu
+mail.recipients.emails.wheat = cornellCopy@cornell.edu
+#URL of your http://cornell/dna_sample_tracking_ce/
+url.maize.production = http://cornell/dna_sample_tracking_ce/
+url.wheat.production = http://cornell/dna_sample_tracking_ce/
