Updating several new features

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -29,8 +29,8 @@ column.position.file.season = 7
 column.position.file.plant.number = 2
 #url of the services for queries in Knowledge Base
 #url.service.kbase=http://localhost:8081/KBServicesreport.path.kbio.grid.96
-#url.service.kbase=http://localhost:8080/KBServices
-service.kbase.url=http://localhost:8080/services
+#url.service.kbase=http://172.17.60.118:8080/KBServices
+service.kbase.url=http://esb-dev.cimmyt.org:8080/services
 #time to wait for getting a connection to KB server
 service.kbase.connectionTimeout=5000
 #time to wait for the KB services to respond
@@ -49,19 +49,22 @@ textinput.valid.regexp.simpleSymbols=[\\W&&[^()/\\-\\s,\\*#\\+\\<]]
 textinput.valid.regexp.noSymbols=[\\W&&[^\\s.]]
 report.path.intertek.format.96 = /com/cimmyt/reports/src/intertek_format_96.xls
 report.path.genotyping.services.format.96 = /com/cimmyt/reports/src/AGT216_SNP_Genotyping_Services.xls
+report.path.genotyping.services.eamil.intertek = N.Enghwa@cgiar.org
 ############################################ External services
-bms.service.api = api.leafnode.io:10081/
+bms.service.api = http://itu-dev-srv:8280/brapi/v1
 
 ################################## Service contries
 webservice.contry.external= http://services.groupkt.com/country/get/all
 
 ################################ Email
-mail.smtp.host = host.org
-mail.smtp.port = 587
-mail.account.manager = email_manager@cgiar.org
-mail.account.password = password
-mail.from.email = email_breeding@cgiar.org
-mail.recipients.emails.maize = email_breeding@cgiar.org;
-mail.recipients.emails.wheat = email_breeding@cgiar.org;
-url.maize.production = http://localhost:8080/dna_sample_trackingm/
-url.wheat.production = http://localhost:8080/dna_sample_trackingw/
+mail.smtp.host = 172.17.61.230
+mail.smtp.port = 25
+mail.account.manager = breedingapplications@cgiar.org
+mail.account.password = Africa&2017
+mail.from.email = breedingapplications@cgiar.org
+mail.recipients.emails.maize = breedingapplications@cgiar.org;
+mail.recipients.emails.wheat = breedingapplications@cgiar.org;
+#mail.recipients.emails.maize = cimmyt-dmu@cgiar.org;
+#mail.recipients.emails.wheat = cimmyt-dmu@cgiar.org;
+url.maize.production = http://172.17.60.85:8080/dna_sample_trackingm/
+url.wheat.production = http://172.17.60.85:8080/dna_sample_trackingw/
