--- a/src/main/resources/english.properties
+++ b/src/main/resources/english.properties
@@ -544,10 +544,10 @@ lbl.temporal.sample.message.assign.button = Assign temporary samples
 lbl.temporal.sample.message.error.location = The location do not match
 lbl.temporal.sample.message.error.season = The season do not march
 ######################################## BMS
-lbl.bms.module = BMS
-lbl.bms.col.list.name = List Name
-lbl.bms.col.descrition = Description
-lbl.bms.col.notes = Notes
+lbl.bms.module = Breeding
+lbl.bms.col.list.name = Name
+lbl.bms.col.descrition = Trial Name
+lbl.bms.col.notes = Location Name
 lbl.bms.col.list.size = List Size
 lbl.bms.col.list.header.detail.desigantion = Designation
 lbl.bms.col.list.header.detail.seed.source = Seed Source
